@@ -1,6 +1,7 @@
 package net.minestom.server.entity;
 
 import net.minestom.server.coordinate.Pos;
+import net.minestom.server.coordinate.Vec;
 import net.minestom.server.network.packet.server.play.SetPassengersPacket;
 import net.minestom.server.network.packet.server.play.SpawnEntityPacket;
 import net.minestom.testing.Env;
@@ -117,14 +118,14 @@ public class PassengerIntegrationTest {
 
         // Default case
 
-        List<Double> passengerAttachment = vehicle.getEntityType().registry().entityAttachment("PASSENGER");
-        List<Double> vehicleAttachment = passenger.getEntityType().registry().entityAttachment("VEHICLE");
-        assertNotNull(passengerAttachment);
-        assertNotNull(vehicleAttachment);
+        List<Vec> passengerAttachments = vehicle.getEntityType().entityAttachments("PASSENGER");
+        List<Vec> vehicleAttachments = passenger.getEntityType().entityAttachments("VEHICLE");
+        assertNotNull(passengerAttachments);
+        assertNotNull(vehicleAttachments);
 
-        Pos passengerOffset = new Pos(passengerAttachment.get(0), passengerAttachment.get(1), passengerAttachment.get(2));
-        Pos vehicleOffset = new Pos(vehicleAttachment.get(0), vehicleAttachment.get(1), vehicleAttachment.get(2));
-        Pos assumedPosition = vehicle.getPosition().add(passengerOffset).sub(vehicleOffset);
+        Vec passengerAttachment = passengerAttachments.getFirst();
+        Vec vehicleAttachment = vehicleAttachments.getFirst();
+        Pos assumedPosition = vehicle.getPosition().add(passengerAttachment).sub(vehicleAttachment);
         assertEquals(passenger.getPosition(), assumedPosition);
     }
 }
